# website_downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  advanced_downloader.py  config_example.json  demo.py  pyproject.toml  quick_start.py  requirements.txt  setup.cfg  setup_dev.py  website_downloader.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  examples.md  troubleshooting.md
idc_unison/: download_report.txt  index.html
idc_unison/static/css/unisonIDC/: buttons.css
idc_unison/static/js/unisonIDC/: jquery.validate.min.js
quick_start_advanced/: index.html
quick_start_advanced/forms/: post.html
quick_start_test/: download_report.txt  index.html
quick_start_test/forms/: post.html
tests/: __init__.py  conftest.py  test_advanced_downloader.py  test_website_downloader.py
